Fixed alignment of profile picture in index.html

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1476,6 +1476,8 @@ input, select, textarea {
 		outline: 0;
 	}
 		.feature-image-gzachos img {
+			margin-left: auto;
+			margin-right: auto;
 			display: block;
 			width: 200px;
 		}
